# mcp_git_commit_generator

./: .dxtignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  PROJECT_STRUCTURE.md  README.md  TOOLS.md  WARP.md  manifest.json  pyproject.toml  ruff.toml
src/: __init__.py  server.py
src/mcp_git_commit_generator/: __init__.py  __main__.py  server.py  server_3.py
src/mcp_git_commit_generator/core/: __init__.py  models.py
src/mcp_git_commit_generator/tools/: __init__.py  commit_analysis.py  git_operations.py  register_tools.py
tests/: test_commit_analysis.py  test_git_operations.py
