[project]
name = "mcp-git-commit-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.45",
    "mcp[cli]>=1.12.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

# Configuración de Black (formateador)
[tool.black]
line-length = 88
target-version = ['py313']
include = 'src/.*\.py$'

# Configuración de isort (organizar imports)
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["__pycache__", ".git", ".venv", "build", "dist"]
src_paths = ["src"]

# Configuración de MyPy (verificador de tipos)
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "build", ".venv"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
asyncio_mode = "auto"
