[project]
name = "mcp-git-commit-generator"
version = "0.1.1"
description = "generator commit messages"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "LuiccianDev", email = "LuiccianDev@gmail.com"}
]
license = { file = "LICENSE" }
keywords = ["mcp", "git", "commit", "generator",  "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "gitpython>=3.1.45",
    "mcp[cli]>=1.12.3",
]

[project.urls]
Homepage = "https://github.com/LuiccianDev"
Repository = "https://github.com/LuiccianDev/mcp_git_commit_generator"
Documentation = "https://github.com/LuiccianDev/mcp_git_commit_generator/blob/master/README.md"
issues = "https://github.com/LuiccianDev/mcp_git_commit_generator/issues"


[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
mcp-git-commit-generator = "mcp_git_commit_generator.__main__:main"

[project.entry-points."mcp.servers"]
git-commit-generator = "mcp_git_commit_generator.__main__:main"


[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_git_commit_generator*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
